chore(release): prepare v0.3.0